Use older syntax for paths