@@ -7,6 +7,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 class LineFeedTest {
 
@@ -19,8 +20,8 @@ class LineFeedTest {
     @DisplayName("Should hash text files ignoring line feeds")
     void textHash() {
         // We know these resource files will not be null
-        Path crlf = Path.of(getClass().getResource("/hash_crlf.txt").getPath().substring(1));
-        Path lf = Path.of(getClass().getResource("/hash_lf.txt").getPath().substring(1));
+        Path crlf = Paths.get(getClass().getResource("/hash_crlf.txt").getPath().substring(1));
+        Path lf = Paths.get(getClass().getResource("/hash_lf.txt").getPath().substring(1));
 
         String hashLF = FileHash.hashFile(lf);
         String hashCRLF = FileHash.hashFile(crlf);
